# carg-os

./: .gitignore  CMakeLists.txt  Makefile  flake.nix
cmake/: toolchain.cmake
docs/: README.md
src/: dummy.c
